# Thesis-code

./: .gitignore  .gitmodules  README.md  init.sh
hw/: README.md
hw/pext_tb/: README.md  sim.sh
hw/pext_tb/high_level/: mult.py
hw/pext_tb/tb/: ibex_pext_mult_tb.sv  ibex_pext_tb.sv  test_tb.sv
hw/pext_tb/verilated/: README.md
results/: README.md  utilized_instructions.txt
results/benchmarks/matmult/: ibex-stat.txt  pext-stat.txt  results.txt
results/benchmarks/mlperf/aww_ibex/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/aww_pext/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/ic_ibex/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/ic_pext/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/toy_ibex/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/toy_pext/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/vww_ibex/: ibex_simple_system_pcount.csv
results/benchmarks/mlperf/vww_pext/: ibex_simple_system_pcount.csv
results/compliance/: baseline_ibex.txt  compliance_pext.txt  pext_ibex_0.txt
results/syn/rv32emc/reports/: area.rpt
results/syn/rv32emc/reports/timing/: in2out.csv.rpt  in2out.rpt  in2reg.csv.rpt  in2reg.rpt  overall.csv.rpt  overall.rpt  reg2out.csv.rpt  reg2out.rpt  reg2reg.csv.rpt  reg2reg.rpt
results/syn/rv32imc/reports/: area.rpt
results/syn/rv32imc/reports/timing/: in2out.csv.rpt  in2out.rpt  in2reg.csv.rpt  in2reg.rpt  overall.csv.rpt  overall.rpt  reg2out.csv.rpt  reg2out.rpt  reg2reg.csv.rpt  reg2reg.rpt
scripts/: README.md  run_compliance.sh  run_sim.sh
scripts/trace_analyzer/: Instructions.txt  analyzer.py  compliance_comparer.py  trace_comparer.py
sim/fpga/: README.md
sim/spike/: README.md  run.sh
sim/verilated/: README.md
sim/verilator/: README.md  setup.sh
sw/: README.md
sw/benchmarks/: README.md
sw/hello-pext/common/: common.mk
sw/hello-pext/pext_test/: Makefile  pext_test.c
sw/hello-vext/: Makefile  vext_test.c
sw/hello-world/common/: common.mk  crt0.d  simple_system_common.d
sw/hello-world/hello_test/: hello_test.d  hello_test.elf  hello_test.vmem
sw/idle/ibex/common/: common.mk
sw/idle/ibex/idle/: Makefile  idle.c
sw/idle/vicuna/: Makefile  idle.c
sw/mlperf-tiny/: CMakeLists.txt  README.md  gen_benchmarks.sh
sw/mlperf-tiny/CMake/: add_intg_test.cmake  toolchain_GCC.cmake
sw/mlperf-tiny/Include/: muriscv_nn_support_functions.h  riscv_nnsupportfunctions.h
sw/mlperf-tiny/Integration/: CMakeLists.txt
sw/mlperf-tiny/Integration/Vicuna/: CMakeLists.txt  link.ld  lld_link.ld  runtime.c
sw/mlperf-tiny/Integration/ibex/: CMakeLists.txt  crt0.S  simple_system_common.c
sw/mlperf-tiny/Integration/tflm/aww/: main.cpp
sw/mlperf-tiny/Integration/tflm/aww/aww_data/: aww_input_data.cc  aww_input_data.h
sw/mlperf-tiny/Integration/tflm/ic/: main.cpp
sw/mlperf-tiny/Integration/tflm/ic/ic_data/: ic_input_data.cc  ic_input_data.h
sw/mlperf-tiny/Integration/tflm/tflm/: run_tflm_integration_tests.sh
sw/mlperf-tiny/Integration/tflm/toy/: main.cpp
sw/mlperf-tiny/Integration/tflm/toy/toy_data/: toy_input_data.cc  toy_input_data.h
sw/mlperf-tiny/Integration/tflm/vww/: main.cpp
sw/mlperf-tiny/Integration/tflm/vww/vww_data/: vww_input_data.h
sw/mlperf-tiny/Source/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/ActivationFunctions/: CMakeLists.txt  riscv_nn_activation_s16.c  riscv_relu6_s8.c  riscv_relu_q7.c
sw/mlperf-tiny/Source/NMSIS-NN/BasicMathFunctions/: CMakeLists.txt  riscv_elementwise_add_s8.c
sw/mlperf-tiny/Source/NMSIS-NN/ConcatenationFunctions/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/ConvolutionFunctions/: CMakeLists.txt  riscv_convolve_1x1_s8.c  riscv_convolve_1x1_s8_fast.c  riscv_convolve_get_buffer_sizes_s16.c  riscv_convolve_get_buffer_sizes_s8.c  riscv_convolve_wrapper_s16.c  riscv_convolve_wrapper_s8.c  riscv_depthwise_conv_get_buffer_sizes_s8.c  riscv_depthwise_conv_s16.c  riscv_depthwise_conv_wrapper_s8.c
sw/mlperf-tiny/Source/NMSIS-NN/FullyConnectedFunctions/: CMakeLists.txt  riscv_fully_connected_get_buffer_sizes_s16.c  riscv_fully_connected_get_buffer_sizes_s8.c  riscv_fully_connected_s16.c  riscv_fully_connected_s8.c
sw/mlperf-tiny/Source/NMSIS-NN/LSTMFunctions/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/NNSupportFunctions/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/PoolingFunctions/: CMakeLists.txt  riscv_avgpool_get_buffer_sizes_s8.c  riscv_avgpool_s8.c
sw/mlperf-tiny/Source/NMSIS-NN/ReshapeFunctions/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/SVDFunctions/: CMakeLists.txt
sw/mlperf-tiny/Source/NMSIS-NN/SoftmaxFunctions/: CMakeLists.txt  riscv_softmax_s16.c  riscv_softmax_s8.c  riscv_softmax_s8_s16.c
sw/mlperf-tiny/Source/muRISCV-NN/ConvolutionFunctions/: muriscv_nn_mat_mult_s8.c
sw/mlperf-tiny/Source/muRISCV-NN/NNSupportFunctions/: muriscv_nn_mat_mul_core_1x_s8.c  muriscv_nn_mat_mul_core_4x_s8.c
sw/pext-test/common/: common.mk
sw/pext-test/pext_test/: pext_test.c
sw/synthetic/common/: crt0.S  matrix_common.c
sw/synthetic/ibex/axpy/: Makefile  axpy.c  matmult.c
sw/synthetic/ibex/common/: common.mk  matrix_common.c  matrix_common.h  simple_system_common.c  simple_system_common.h
sw/synthetic/ibex/conv/: Makefile  conv.c  conv.c.c
sw/synthetic/ibex/matmult/: matmult.c
sw/synthetic/matmult/: test.txt
sw/synthetic/vicuna/axpy/: Makefile  axpy.c
sw/synthetic/vicuna/axpy/lib/: simple_system_common.h
sw/synthetic/vicuna/common/: Makefile
sw/synthetic/vicuna/conv/: Makefile  conv.c
sw/synthetic/vicuna/conv/lib/: simple_system_common.c
sw/synthetic/vicuna/matmult/: matmult.c
sw/tests/common/: common.h  common.mk  crt0.d  simple_system_common.d
sw/tests/hello_test/: hello_test.c  hello_test.d
syn/: README.md  setup.sh  synthesis.sh
synthesis/: README.md
toolchain/: README.md  setup.sh
(+2 files in other folders)
